# Stress_tester

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  doc.md  flamegraph.sh  profile.sh  shell.nix  shell.sh  structure.txt
Depricated/: dep.cpp
Scripts/: profile.sh
include/: CPUStressTest.hpp  ConsoleColors.hpp  ConsoleInitializer.h  LinkedList.h  LinkedList.hpp  MemoryStressTest.hpp  SystemStressTest.h  SystemStressTest.hpp  TimeManager.h  TimeManager.hpp
src/: CPUStressTest.cpp  ConsoleInitializer.cpp  MemoryStressTest.cpp  SystemStressTest.cpp  TimeManager.cpp  dummy.cpp  main.cpp
tests/: test_cpustresstest.cpp  test_linkedlist.cpp  test_memorystresstest.cpp  test_timemanager.cpp
